# sciagent

./: Dockerfile  create_index.py  docker-compose.yml  eval_dataset.py  eval_run.py  ingest.py  pyproject.toml  try_chain.py  try_memory.py  try_stream.py  ws_test.html
src/sciagents/: __init__.py  config.py
src/sciagents/application/: conversation.py
src/sciagents/application/conversation_service/: generate_response.py
src/sciagents/application/conversation_service/workflow/: chains.py  edges.py  graph.py  nodes.py  state.py  tools.py
src/sciagents/application/rag/: embeddings.py  retrievers.py  splitters.py
src/sciagents/domain/: exceptions.py  prompts.py  scientist.py  scientist_factory.py
src/sciagents/infrastructure/: api.py
