[project]
name = "sciagents"
version = "0.1.0"
description = "AI agents that impersonate great scientists debating the nature of reality"
readme = "README.md"
authors = [
    { name = "omarboukherys", email = "omarioboukherys11@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "langchain>=1.3.10",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
]

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"
