[project]
name = "sciagents"
version = "0.1.0"
description = "AI agents that impersonate great scientists debating the nature of reality"
readme = "README.md"
authors = [
    { name = "omarboukherys", email = "omarioboukherys11@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.1",
    "jinja2>=3.1.6",
    "langchain>=1.3.10",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-mongodb>=0.11.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph-checkpoint-mongodb>=0.4.0",
    "loguru>=0.7.3",
    "opik>=2.1.5",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pymongo>=4.12,<4.17",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "torch>=2.0.0",
    "uvicorn>=0.49.0",
]

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
